--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+    <div class="input-group input-group-sm input-group-inline shadow-none" id="octant_search_wrapper">
+        <input type="text" id="octant_search_input" class="form-control octant_search" placeholder="Search placeholder">
+        <span class="bi cursor-pointer bi-search" id="octant_search_icon"></span>
+    </div>
     <h1>About</h1>
     <p>Random facts about things</p>
     <p>
@@ -57,5 +61,8 @@
         <a href='sites/Watermelons.html'>Watermelons</a>,
         <a href='sites/Zucchini.html'>Zucchini</a>.
     </p>
+    <footer>
+        <script src="https://admin.octantsearch.com/landing/api/v1/search/85183e6d-6b74-4403-b5b1-234a633e9dda/search.js"></script>
+    </footer>
 </body>
 </html>
