--- a/sites/Mangos.html
+++ b/sites/Mangos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mangos</title>
 </head>
 <body>
     <h1>Mangos</h1>
