--- a/sites/Owls.html
+++ b/sites/Owls.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Owls</title>
 </head>
 <body>
-    <h1>Owls </h1>
+    <h1>Owls</h1>
     <p>Owls are nocturnal birds of prey with exceptional night vision and the ability to turn their heads up to 270 degrees.</p>
 </body>
 </html>
