--- a/sites/Potatoes.html
+++ b/sites/Potatoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Potatoes</title>
 </head>
 <body>
     <h1>Potatoes</h1>
