--- a/sites/Tigers.html
+++ b/sites/Tigers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tigers</title>
 </head>
 <body>
     <h1>Tigers</h1>
