--- a/sites/Apples.html
+++ b/sites/Apples.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Apples</title>
 </head>
 <body>
     <h1>Apples</h1>
