--- a/sites/Bell_Peppers.html
+++ b/sites/Bell_Peppers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bell Peppers</title>
 </head>
 <body>
     <h1>Bell Peppers</h1>
