--- a/sites/Blueberries.html
+++ b/sites/Blueberries.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blueberries</title>
 </head>
 <body>
     <h1>Blueberries</h1>
