--- a/sites/Broccoli.html
+++ b/sites/Broccoli.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Broccoli</title>
 </head>
 <body>
     <h1>Broccoli</h1>
