--- a/sites/Cabbage.html
+++ b/sites/Cabbage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cabbage</title>
 </head>
 <body>
     <h1>Cabbage</h1>
