--- a/sites/Chimpanzees.html
+++ b/sites/Chimpanzees.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chimpanzees</title>
 </head>
 <body>
     <h1>Chimpanzees</h1>
