--- a/sites/Dolphins.html
+++ b/sites/Dolphins.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dolphins</title>
 </head>
 <body>
     <h1>Dolphins</h1>
