--- a/sites/Gorillas.html
+++ b/sites/Gorillas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Gorillas</title>
 </head>
 <body>
     <h1>Gorillas</h1>
