--- a/sites/Kiwi.html
+++ b/sites/Kiwi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kiwi</title>
 </head>
 <body>
     <h1>Kiwi</h1>
