--- a/sites/Koalas.html
+++ b/sites/Koalas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Koalas</title>
 </head>
 <body>
     <h1>Koalas</h1>
