--- a/sites/Pandas.html
+++ b/sites/Pandas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pandas</title>
 </head>
 <body>
     <h1>Pandas</h1>
