--- a/sites/Penguins.html
+++ b/sites/Penguins.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Penguins</title>
 </head>
 <body>
     <h1>Penguins</h1>
