--- a/sites/Spinach.html
+++ b/sites/Spinach.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Spinach</title>
 </head>
 <body>
     <h1>Spinach</h1>
