--- a/sites/Strawberries.html
+++ b/sites/Strawberries.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Strawberries</title>
 </head>
 <body>
     <h1>Strawberries</h1>
