--- a/sites/Zucchini.html
+++ b/sites/Zucchini.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Zucchini</title>
 </head>
 <body>
     <h1>Zucchini</h1>
