--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title test</title>
 </head>
 <body>
 	<div class="input-group input-group-sm input-group-inline shadow-none" id="octant_search_wrapper">
