--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <input type="text" id="octant_search_input" class="form-control octant_search" placeholder="Search placeholder">
 	  <i class="bi bi-search"></i>
 	</div>
-    <h1>About</h1>
+    <h1>About us</h1>
     <p>Random facts about things</p>
     <p>
         <a href='sites/Apples.html'>Apples</a>,
