--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<div class="input-group input-group-sm input-group-inline shadow-none" id="octant_search_wrapper">
-	  <input type="text" id="octant_search_input" class="form-control octant_search" placeholder="Search placeholder">
-	  <i class="bi bi-search"></i>
+		<input type="text" id="octant_search_input" class="form-control octant_search" placeholder="Search placeholder">
+		<span class="bi cursor-pointer bi-search" id="octant_search_icon"></span>
 	</div>
     <h1>About us</h1>
     <p>Random facts about things</p>
@@ -62,7 +62,7 @@
         <a href='sites/Zucchini.html'>Zucchini</a>.
     </p>
     <footer>
-		<script src="https://admin.octantsearch.com/landing/api/v1/search/85183e6d-6b74-4403-b5b1-234a633e9dda/search.js"></script>
+		<script src="https://admin-octantsearch-itst.cl04.shiwaforce.com/landing/api/v1/search/92c6cece-86ff-4dc9-aee0-67dd4d6d349c/search.js"></script>
     </footer>
 </body>
 </html>
