--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href='sites/Zucchini.html'>Zucchini</a>.
     </p>
     <footer>
-		<script src="https://admin-octantsearch-itst.cl04.shiwaforce.com/landing/api/v1/search/92c6cece-86ff-4dc9-aee0-67dd4d6d349c/search.js"></script>
+		<script src="https://admin.octantsearch.com/landing/api/v1/search/85183e6d-6b74-4403-b5b1-234a633e9dda/search.js"></script>
     </footer>
 </body>
 </html>
