--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <a href='sites/Watermelons.html'>Watermelons</a>,
         <a href='sites/Zucchini.html'>Zucchini</a>.
     </p>
-    <footer>
-		<script src="https://admin.octantsearch.com/landing/api/v1/search/85183e6d-6b74-4403-b5b1-234a633e9dda/search.js"></script>
+	<footer>
+		<script src="https://admin-octantsearch-itst.cl04.shiwaforce.com/landing/api/v1/search/d3d8ff97-bbd6-4642-bd12-bcf9409119c7/search.js"></script>
     </footer>
 </body>
 </html>
