--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <a href='sites/Strawberries.html'>Strawberries</a>,
         <a href='sites/Tigers.html'>Tigers</a>,
         <a href='sites/Watermelons.html'>Watermelons</a>,
-        <a href='sites/Zucchini.html'>Zucchini</a>.
+        <a href='sites/Zucchini.html'>Zucchini</a>,
+		<a href='sites/VeryLongWordSoICanTestTheSearchEngineHowDoesItReactToVeryFrickinLongWords.html'>Watermelons</a>.
     </p>
 	<footer>
 		<script src="https://admin-octantsearch-itst.cl04.shiwaforce.com/landing/api/v1/search/d3d8ff97-bbd6-4642-bd12-bcf9409119c7/search.js"></script>
